--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "jest": "^21.2.1",
+    "jest": "^23.5.0",
     "jest-styled-components": "^4.9.0",
     "react-test-renderer": "^16.1.1",
     "webpack-dev-server": "^2.9.4"
@@ -48,6 +48,7 @@
     "prop-types": "^15.6.0",
     "qs": "^6.5.1",
     "query-string": "^5.0.1",
+    "ramda": "^0.25.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
