--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^1.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.11.1",
     "node-sass": "^4.9.3",
     "normalize-scss": "^7.0.1",
     "prop-types": "^15.6.0",
