--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.11.1",
@@ -57,6 +59,7 @@
     "recompose": "^0.30.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
