--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "export NODE_ENV=development && webpack-dev-server --inline --open",
+    "dev": "export NODE_ENV=development && webpack-dev-server --inline --open --mode=development",
     "start": "npm run build && http-server dist -o",
     "build": "webpack -p",
     "watch": "webpack --watch --progress",
@@ -24,33 +24,32 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^23.5.0",
-    "jest-styled-components": "^4.9.0",
-    "react-test-renderer": "^16.1.1",
-    "webpack-dev-server": "^2.9.4"
+    "react-test-renderer": "^16.1.1"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint-import-resolver-webpack": "^0.8.3",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "normalize-scss": "^7.0.1",
     "prop-types": "^15.6.0",
     "qs": "^6.5.1",
-    "query-string": "^5.0.1",
+    "query-string": "^6.1.0",
     "ramda": "^0.25.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -63,10 +62,11 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "styled-components": "^2.2.3",
     "url-search-params": "^0.10.0",
-    "webpack": "^3.12.0",
+    "webpack": "^4.18.0",
     "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
     "webpack-dotenv-plugin": "^2.0.2"
   }
 }
